<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin = "10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/imageViewBook"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/book"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/navyBlue"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@id/imageViewBook"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller_name"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@id/imageViewBook"
                app:layout_constraintTop_toBottomOf="@id/bookName"

                />



            <TextView
                android:id="@+id/contactNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@id/imageViewBook"
                app:layout_constraintTop_toBottomOf="@id/sellerName"


                />
            <TextView
                android:id="@+id/moreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"
                android:textStyle="bold"
                android:textColor="@color/navyBlue"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@id/imageViewBook"
                app:layout_constraintTop_toBottomOf="@id/contactNo"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>