<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Authentication.LoginPage"
    >


    <View
        android:id="@+id/vector_2"
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="395dp"
        android:background="@drawable/logintrianglepic2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vector_3"
        android:layout_width="502.5dp"
        android:layout_height="336dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="395dp"
        android:background="@drawable/logintrianglepic1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="323dp"
        android:layout_height="59dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="323dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_textview"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

<EditText
    android:id="@+id/editpassword"
    android:layout_width="323dp"
        android:layout_height="59dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_textview"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:importantForAutofill="no" />

    <ToggleButton
        android:id="@+id/togglePw"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textOff=""
        android:text=""
        android:textOn=""
        android:layout_margin="20dp"
        android:background="@mipmap/hidepasswordicon"
        app:layout_constraintEnd_toEndOf="@id/editpassword"
        app:layout_constraintTop_toTopOf="@id/editpassword"
        app:layout_constraintBottom_toBottomOf="@id/editpassword"

        >



    </ToggleButton>

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="237dp"
        android:layout_marginTop="484dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="224dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="148dp"
        android:background="@color/navyBlue"
        android:text="@string/login"
        android:textColor="#F6F0F0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="81dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8facebook"
        android:importantForAccessibility="no" />

    <ImageButton
        android:id="@+id/googleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="81dp"
        android:textOff=""
        android:textOn=""
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8google"
        android:importantForAccessibility="no" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="306dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="81dp"
        android:background="#FAF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8instagram"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/registerAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="675dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="34dp"
        android:text="@string/don_t_have_an_account_register_now"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="583dp"
        android:text="@string/welcome_login_here"
        android:textColor="@color/navyBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>