<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cornerRadius="15dp"
        android:src="@drawable/baseline_logout_24"
        android:backgroundTint="@color/navyBlue"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/linearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"


        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/feedback"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/logout"
        android:layout_centerVertical="true"
        android:layout_marginTop="-75dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/feedbackround"
        android:text="Give us your valuable feedback"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:elevation="3dp"
        android:textStyle="italic">


    </Button>

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_view"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/profileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="300dp"
            app:cardCornerRadius="40dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_user"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


            <!--                app:civ_border_color="@color/white"-->
            <!--                app:civ_border_width="2dp" />-->

        </LinearLayout>

        <TextView
            android:id="@+id/greetingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:text="@string/welcome_to_smart_student_care"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@+id/top_view">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="15dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintWidth_percent="0.4">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/homeTappedView"
                    android:layout_width="131dp"
                    android:layout_height="124dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@mipmap/home_foreground"
                    tools:srcCompat="@mipmap/home_foreground" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="15dp"
            app:layout_constraintWidth_percent="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/carTappedView"
                    android:layout_width="131dp"
                    android:layout_height="124dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@mipmap/ride_foreground"
                    tools:srcCompat="@mipmap/ride_foreground"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ride"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="12dp"
            app:layout_constraintWidth_percent="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/buySellView"
                    android:layout_width="132dp"
                    android:layout_height="127dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/buysell"
                    app:srcCompat="@mipmap/book_foreground"
                    tools:srcCompat="@mipmap/book_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/buy_sell"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="15dp"
            app:layout_constraintWidth_percent="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/transitLink"
                    android:layout_width="151dp"
                    android:layout_height="149dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@mipmap/bus_foreground"
                    tools:srcCompat="@mipmap/bus_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bus"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </GridLayout>


</RelativeLayout>